<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.Descargar">

    <!-- TODO: Update blank fragment layout -->
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/fondo">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginStart="27dp"
            android:layout_marginTop="16dp"
            android:text="@string/IntroduceUrl"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtUrl"
            android:layout_width="344dp"
            android:layout_height="45dp"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="33dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/url"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtExitoDescarga"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="189dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/btnDescargar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Descargar ahora"

            android:drawableLeft="@drawable/ic_download_1681779"
            android:drawablePadding="8dp"
            android:textColor="@android:color/white"
            android:backgroundTint="#49678D"

            android:layout_marginLeft="86dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="22dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUrl" />

        <Button
            android:id="@+id/btnEscoger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="87dp"
            android:layout_marginTop="15dp"

            android:backgroundTint="#49678D"
            android:drawableLeft="@android:drawable/checkbox_on_background"
            android:drawablePadding="8dp"
            android:text="@string/EscogerGymkana"

            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtExitoDescarga" />

    </android.support.constraint.ConstraintLayout>

</FrameLayout>
